--- a/.github/workflows/sdcc_build.yml
+++ b/.github/workflows/sdcc_build.yml
@@ -28,14 +28,14 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: ubuntu-20.04
-            name: Linux-x64
-          - os: ubuntu-20.04
-            name: Win32-On-Linux
-          - os: ubuntu-20.04
-            name: Win64-On-Linux
-          - os: macos-11
-            name: MacOS-x64
+          # - os: ubuntu-20.04
+          #   name: Linux-x64
+          # - os: ubuntu-20.04
+          #   name: Win32-On-Linux
+          # - os: ubuntu-20.04
+          #   name: Win64-On-Linux
+          # - os: macos-11
+          #   name: MacOS-x64
           - os: macos-14
             name: MacOS-arm64            
     steps:
@@ -114,6 +114,7 @@ jobs:
           export MACOSX_DEPLOYMENT_TARGET=10.10
           cd sdcc-${{ env.SDCC_VER }}/sdcc
           # "disable-shared" helps make sdar get statically linked (could also try to apply this on just support/sdbinutils/binutils/)
+          brew install flex bison boost
           ./configure --disable-shared --enable-gbz80-port  --enable-z80-port  --enable-mos6502-port  --enable-mos65c02-port  --disable-r800-port  --disable-mcs51-port  --disable-z180-port  --disable-r2k-port  --disable-r2ka-port  --disable-r3ka-port  --disable-tlcs90-port  --disable-ez80_z80-port  --disable-z80n-port  --disable-ds390-port  --disable-ds400-port  --disable-pic14-port  --disable-pic16-port  --disable-hc08-port  --disable-s08-port  --disable-stm8-port  --disable-pdk13-port  --disable-pdk14-port  --disable-pdk15-port  --disable-ucsim  --disable-doc  --disable-device-lib 
           make
           # New sdcc build no longer copies some binaries to bin
