--- a/.github/workflows/sdcc_build.yml
+++ b/.github/workflows/sdcc_build.yml
@@ -60,6 +60,7 @@ jobs:
         if: (matrix.name == 'MacOS-x64') || (matrix.name == 'MacOS-arm64')
         run: |
           # Packages (some may already be present)
+          brew update
           brew install flex bison boost texinfo zlib subversion
 
       # This could be split apart to separate 32 and 64 bit, but doesn't
