--- a/.github/workflows/sdcc_build.yml
+++ b/.github/workflows/sdcc_build.yml
@@ -62,6 +62,10 @@ jobs:
           # Packages (some may already be present)
           brew update
           brew install flex bison boost texinfo zlib subversion
+          which brew
+          find /usr/local/Cellar | grep adjacency_list.hpp
+          ls -l /usr/local/include/boost
+          find /opt/homebrew  | grep adjacency_list.hpp
 
       # This could be split apart to separate 32 and 64 bit, but doesn't
       # take much time and is easier to keep in sync as one stage.
@@ -115,7 +119,6 @@ jobs:
           export MACOSX_DEPLOYMENT_TARGET=10.10
           cd sdcc-${{ env.SDCC_VER }}/sdcc
           # "disable-shared" helps make sdar get statically linked (could also try to apply this on just support/sdbinutils/binutils/)
-          brew install flex bison boost
           ./configure --disable-shared --enable-gbz80-port  --enable-z80-port  --enable-mos6502-port  --enable-mos65c02-port  --disable-r800-port  --disable-mcs51-port  --disable-z180-port  --disable-r2k-port  --disable-r2ka-port  --disable-r3ka-port  --disable-tlcs90-port  --disable-ez80_z80-port  --disable-z80n-port  --disable-ds390-port  --disable-ds400-port  --disable-pic14-port  --disable-pic16-port  --disable-hc08-port  --disable-s08-port  --disable-stm8-port  --disable-pdk13-port  --disable-pdk14-port  --disable-pdk15-port  --disable-ucsim  --disable-doc  --disable-device-lib 
           make
           # New sdcc build no longer copies some binaries to bin
